feat(api): use verbs
